[package]
name = "transbt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
rust-ini = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
hex = "0.4"

[target.'cfg(target_family = "windows")'.dependencies]
winreg = "0.50"
